# margit

./: .gitignore  Cargo.toml  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml
crates/margit/: Cargo.toml
crates/margit-compat/: Cargo.toml
crates/margit-compat/src/: lib.rs
crates/margit-core/: Cargo.toml
crates/margit-ui/: Cargo.toml
crates/margit/src/: main.rs
crates/margit/tests/: passthrough.rs
